started developing the fleet.management module
