# api/src/main/resources/public/api.yaml
@@ -13,8 +13,14 @@ servers:
       port:
         default: '8080'
 tags:
-  - name: Sample
+  - name: user
     description: User resource
+
+security:
+  - oAuth:
+      - write
+      - read
+
 paths:
   /users:
     get:
@@ -55,12 +61,8 @@ paths:
             schema:
               $ref: '#/components/schemas/UserDTO'
       responses:
-        '200':
-          description: success
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserDTO'
+        '201':
+          $ref: '#/components/responses/Created'
         '400':
           $ref: '#/components/responses/BadRequest'
         '401':
@@ -71,19 +73,20 @@ paths:
           $ref: '#/components/responses/ServerError'
 
   /users/{id}:
+    parameters:
+      - in: path
+        name: id
+        required: true
+        schema:
+          type: integer
+          format: int32
+
     get:
       tags:
         - user
-      summary: Return a user by id.
-      description: Return a user by id.
-      operationId: getUserById
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: integer
-          description: The id of user
-          required: true
+      summary: get a user
+      description: returns the details for a user, based on id, except the password
+      operationId: getUser
       responses:
         '200':
           description: success
@@ -106,20 +109,9 @@ paths:
       summary: Delete a user by id
       description: Delete a user by id.
       operationId: deleteUser
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: integer
-          description: The id of user
-          required: true
       responses:
         '200':
           description: success
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserDTO'
         '400':
           $ref: '#/components/responses/BadRequest'
         '401':
@@ -135,20 +127,16 @@ paths:
       summary: Update user
       description: Update a user’s details using a PATCH request
       operationId: patchUser
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: integer
-          description: The id of user
-          required: true
+      requestBody:
+        description: The fields of the user to change
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserDTO'
       responses:
         '200':
           description: success
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserDTO'
         '400':
           $ref: '#/components/responses/BadRequest'
         '401':
@@ -558,34 +546,57 @@ components:
 
     CarDTO:
       type: object
-      required:
-        - name
       properties:
         id:
           type: integer
           format: int32
+          description: car id
         make:
           type: string
+          example: Ford
+          description: the make of the car
         model:
           type: string
+          example: Fiesta
+          description: the model of the car
         year:
           type: integer
           format: int32
+          example: 2005
+          description: the year in which the car was built
         mileage:
           type: integer
           format: int32
+          example: 123500
+          description: the approximate mileage when the car is being picked up
         fuel:
-          type: string
-        carClazz:
-          type: string
+          $ref: '#/components/schemas/FuelType'
+        carClass:
+          $ref: '#/components/schemas/CarClass'
         status:
-          type: string
-          enum: [ACTIVE, DELETED]
+          $ref: '#/components/schemas/CarStatus'
+    FuelType:
+      type: string
+      enum:
+        - GAS
+        - DIESEL
+    CarClass:
+      type: string
+      enum:
+        - A-segment
+        - B-segment
+        - C-segment
+        - D-segment
+        - E-segment
+        - F-segment
+    CarStatus:
+      type: string
+      enum:
+        - ACTIVE
+        - DELETED
 
     RentalDTO:
       type: object
-      required:
-        - name
       properties:
         id:
           type: integer
@@ -603,8 +614,12 @@ components:
           type: string
           format: date-time
         status:
-          type: string
-          enum: [ACTIVE, CANCELLED]
+          $ref: '#/components/schemas/RentalStatus'
+    RentalStatus:
+      type: string
+      enum:
+        - Active
+        - Deleted
 
     CreatedDTO:
       type: object
